--- a/index2.html
+++ b/index2.html
@@ -17,6 +17,7 @@
                               <h4>Hello, Sanket</h4>
                               <h5>Hello, Sanket</h5>
                               <h6>Hello, Sanket</h6>
+                              <p>This is new file</p>
                        </main>
               </section>
       </header>
