--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-  
+
 <body>
       <header>
               <section>
@@ -17,7 +17,7 @@
                               <h4>Hello, Sanket</h4>
                               <h5>Hello, Sanket</h5>
                               <h6>Hello, Sanket</h6>
-                              <p>This is new file</p>
+                              <p>This is new filegit</p>
                        </main>
               </section>
       </header>
